--- a/package.json
+++ b/package.json
@@ -40,5 +40,12 @@
     "glob": "*",
     "async": "*",
     "minimist": "*"
+  },
+  "devDependencies": {
+    "bower": "1.3.5",
+    "grunt": "~0.4.5",
+    "grunt-contrib-less": "~0.11.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "time-grunt": "~0.3.2"
   }
 }
