First pass at rss feeds for search results
Also pretty up search results url’s

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 
     "glob": "*",
     "async": "*",
-    "minimist": "*"
+    "minimist": "*",
+    "rss": "0.3.2"
   },
   "devDependencies": {
     "bower": "1.3.5",
